# lib/api-spec/openapi.yaml
@@ -648,6 +648,9 @@ components:
           type: boolean
         category:
           type: string
+        routineId:
+          type: string
+          nullable: true
 
     HabitInput:
       type: object
@@ -657,6 +660,9 @@ components:
           type: string
         category:
           type: string
+        routineId:
+          type: string
+          nullable: true
 
     HabitUpdate:
       type: object
@@ -669,6 +675,9 @@ components:
           type: integer
         category:
           type: string
+        routineId:
+          type: string
+          nullable: true
 
     InsightEntry:
       type: object
